Recent Scores, user list ordering (#20)
* broken but nice

* recent scores endpoint

* recent score support

---------
